--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f5f5f5;
+}
+h1{
+	text-align:center;
+	color:white;
+	background-color:#011e29;
+	padding:30px;
+}
+.container{
+	display:flex;
+	gap:20px;
+}
+.container div{
+	border-radius:20px;
+}
+div h2, div h3{
+	text-align:center;
+}
