--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body{
 	background-color:#f5f5f5;
 }
-h1{
+header{
 	text-align:center;
 	color:white;
 	background-color:#011e29;
@@ -13,8 +13,15 @@ h1{
 	gap:20px;
 }
 .container div{
+	background-color:white;
 	border-radius:20px;
+	padding:10px;
+	width:33%;
+	text-align:center;
 }
 div h2, div h3{
+	text-align:center;
+}
+.pictorial-news-section{
 	text-align:center;
 }
